fix: make navbar always visible

--- a/assets/sass/stylesheet.scss
+++ b/assets/sass/stylesheet.scss
@@ -13,6 +13,7 @@ $size-4: 1.2rem;
 $size-5: 1.1rem;
 $size-6: 1rem;
 $size-7: 0.75rem;
+$navbar-breakpoint: 0;
 @import "bulma/sass/utilities/derived-variables";
 @import "bulma/sass/utilities/animations";
 @import "bulma/sass/utilities/mixins";
